feat(service): improve execution flow